# SparseMatrixVectorMultiplication

./: .gitignore  CMakeLists.txt  README.md  main.c  main_cuda.cu  start.sh
cuda_libs/: csr_matrix_cuda.cuh  hll_matrix.cuh  matrix_parser.cuh  performance_calculate.cuh  utility.cuh
cuda_src/: csr_matrix_cuda.cu  hll_matrix.cu  matrix_parser.cu  performance_calculate.cu  utility.cu
graphs/: csr_efficiency.py  csr_parallel_flops_thread.py  hll_efficiency.py  speedup_parallel.py
graphs/openMP/script/: dev_std_value_variation.py  efficiency_result.py  error_result.py  flops_for_all_matrices.py  flops_medium_result.py  flops_minimum_result.py  flops_result.py  memory_stats.py  speedup_parallel.py
libs/: csr_matrix.h  hll_matrix.h  matrix_parser.h  mmio.c  mmio.h  performance_calculate.h  pre_matrix.h  utility.h
matrix_generated/: general_matrix.mtx  pattern_matrix.mtx  symmetric_matrix.mtx
result/: memory_hll.csv  memory_stats.csv  result_cuda.csv  result_openmp.csv  result_total_cuda_128.csv  result_total_cuda_64.csv  result_total_openmp_no_03.csv  spmv_results.csv  spmv_results_definitive.csv  spmv_results_openmp.csv
src/: csr_matrix.c  hll_matrix.c  matrix_generator.py  matrix_parser.c  performance_calculate.c  utility.c
